# mpi_programs

./: .gitignore  README.md  build_programs.py  del_builds.py  results.txt  test_arguments.txt  test_programs.py
mpi_programs/: CMakeLists.txt  test.py
mpi_programs/dijkstra/: CMakeLists.txt  dijkstra.cpp  dijkstra.h
mpi_programs/main/: CMakeLists.txt  main.cpp
mpi_programs/max_vector_value/: CMakeLists.txt  max_vector_value.cpp  max_vector_value.h
mpi_programs/trapez_method/: CMakeLists.txt  trapez_method.cpp  trapez_method.h
mpi_programs/vector_alternations/: CMakeLists.txt  vector_alternations.cpp  vector_alternations.h
others/: del_builds.py  results.txt  run_tests.py  test_arguments.txt
thread_programs/: CMakeLists.txt  test.py
thread_programs/dijkstra/: CMakeLists.txt  dijkstra.cpp  dijkstra.h
thread_programs/main/: CMakeLists.txt  main.cpp
thread_programs/max_vector_value/: CMakeLists.txt  max_vector_value.cpp  max_vector_value.h
thread_programs/trapez_method/: CMakeLists.txt  trapez_method.cpp  trapez_method.h
thread_programs/vector_alternations/: CMakeLists.txt  vector_alternations.cpp  vector_alternations.h
